--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "serve": "^11.3.0",
     "vue": "^2.6.11",
     "vue-router": "^3.1.6",
-    "vuex": "^3.1.3"
+    "vuex": "^3.1.3",
+    "xlsx": "^0.16.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.3.0",
