--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "axios": "^0.19.2",
+    "axios-mock-adapter": "^1.18.1",
     "core-js": "^3.6.4",
     "element-ui": "^2.13.1",
     "serve": "^11.3.0",
